--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.10.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
@@ -134,8 +141,6 @@
 	</dependencies>
 	<build>
 		<plugins>
-
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
